Resolves: tdf#154959 label printers no longer rotate

a) partly revert this piece of:
commit 598ff4e2433a419a432fd54ed5dac560663ec107
    loplugin:constantparam in vcl

b) fix the thinko mismatch of "true" for bSwaped detected
by that plugin

Change-Id: I2d31a969538d1cfa8d22a089fa61fdaa5454cc0f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171449
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
(cherry picked from commit f1b582772bb47fb421886fa268d469c1b5ba41bb)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171681
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>