vcl/unx/generic/printer/ppdparser.cxx
@@ -1408,7 +1408,7 @@ bool PPDParser::getPaperDimension(
     return true;
 }
 
-OUString PPDParser::matchPaperImpl(int nWidth, int nHeight, psp::orientation* pOrientation) const
+OUString PPDParser::matchPaperImpl(int nWidth, int nHeight, bool bSwapped, psp::orientation* pOrientation) const
 {
     if( ! m_pPaperDimensions )
         return OUString();
@@ -1439,10 +1439,16 @@ OUString PPDParser::matchPaperImpl(int nWidth, int nHeight, psp::orientation* pO
         }
     }
 
+    if (nPDim == -1 && !bSwapped)
+    {
+        // swap portrait/landscape and try again
+        return matchPaperImpl(nHeight, nWidth, true, pOrientation);
+    }
+
     if (nPDim == -1)
         return OUString();
 
-    if (pOrientation)
+    if (bSwapped && pOrientation)
     {
         switch (*pOrientation)
         {
@@ -1460,7 +1466,7 @@ OUString PPDParser::matchPaperImpl(int nWidth, int nHeight, psp::orientation* pO
 
 OUString PPDParser::matchPaper(int nWidth, int nHeight, psp::orientation* pOrientation) const
 {
-    return matchPaperImpl(nHeight, nWidth, pOrientation);
+    return matchPaperImpl(nHeight, nWidth, false, pOrientation);
 }
 
 OUString PPDParser::getDefaultInputSlot() const
